Android -> Spring -> AI 파이프라인 구축 완료 및 DB 저장 로직 반영